# floor_detection_from_pointcloud

./: CMakeLists.txt  README.md  package.xml
config/: floor_detection_from_pointcloud.yaml  pointcloud_to_image.yaml
launch/: camera_tf.launch.py  floor_detection_from_pointcloud.launch.py  pointcloud_to_image.launch.py
src/: floor_detection_from_pointcloud_node.cpp  pointcloud_to_image_node.cpp
