<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>floor_detection_from_pointcloud</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="139364969+BOOTCFG@users.noreply.github.com">stefe</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>eigen_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
